--- a/client/src/components/Style/StudentCss/StudentTeacher.css
+++ b/client/src/components/Style/StudentCss/StudentTeacher.css
@@ -4,6 +4,16 @@ body {
   background: #eee ;
 }
 
+.searchbar{
+  display: flex;
+  justify-content: space-between;
+
+  .wrap{
+    margin-top: 20px;
+    margin-right: 50px;
+  }
+}
+
 .head-title{
   margin-top: 20px;
   margin-left: 20px;
@@ -17,17 +27,34 @@ body {
   color: blue;
 }
 
-.container1 {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  margin-left: 20px;
+
+/* card */
+
+
+.column{
+  float: left;
+  width: 20%;
+  padding: 0 20px;
 }
 
-.container1 .card {
+/* Remove extra left and right margins, due to padding */
+.row {
+  margin: 0 -5px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.container{
+  margin-top: 10px !important;
+  margin-bottom: 30px !important;
+}
+.container .card {
   width: 170px;
-  height: 250px;
-  margin-left: 20px;
+  height: 260px;
   border-radius: 20px;
   overflow: hidden;
   box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
@@ -67,19 +94,19 @@ body {
   bottom: 0;
   background: #fff;
   width: 100%;
-  height: 100px;
+  height: 85px;
   color: #000;
   text-align: center;
 }
 
 .details h2 {
-    padding-top: 10px;
-    font-size: 25px;
+    font-size: 20px;
     font-weight:700;
     color: crimson;
 }
  .details .job-title {
-    font-size: 15px;
+   padding-top: 0;
+    font-size: 13px;
     font-weight:700;
     color: #000;
     font-weight: 300;
@@ -87,14 +114,14 @@ body {
 
 .details h4{
     font-size: 10px;
-    font-weight:700;
-    width: 90px;
+    font-weight:500;
+    width: 70px;
     border-radius: 80px;
-    margin-left: 40px;
+    margin-left: 50px;
     background-color:#0072ff;
     color: white;
-    padding: 4px;
-    margin-top: 5px;
+    margin-top: -10px;
+    padding:4px;
     font-weight: 300;
 }
 
@@ -102,4 +129,5 @@ body {
   background-color: rgba(0, 0, 0, 0.3);
     color: white;
 }
+
 
