--- a/client/src/components/Style/StudentCss/Login.css
+++ b/client/src/components/Style/StudentCss/Login.css
@@ -10,11 +10,35 @@ body{
 }
 
 .login_body {
-	background-image: url("../../../assets/bgimg.png");
 	width: 100%;
 	height: 100vh;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
 	font-family: Arial, Helvetica, sans-serif;
+}
+
+.login01 {
+	margin-top: 30px;
+	background-color: #24bc1c;
+	color: #ffffff ;
+	text-shadow: 0 1px 3px rgba(0,0,0,.3);
+	cursor: pointer;
+}
+
+.home-main-content2{
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0, 0.3); /* Black w/opacity/see-through */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1; 
+    width: 95%;
+
+}
+
+.card-content002{
+	
+	margin-top: 33px;
 }
