--- a/client/src/components/LandingPage/Home/Home.css
+++ b/client/src/components/LandingPage/Home/Home.css
@@ -10,7 +10,7 @@ body{
 }
 
 .home-container img{
-	background-image: url("../../../assets/jmi1.png");
+
      filter: blur(8px);
    -webkit-filter: blur(8px);
 	width: 100%;
@@ -77,6 +77,7 @@ body{
   
 }
 .main-content{
+    margin-top: -100px !important;
     margin-left: 90px;
     width: 500px;
     justify-content: center;
@@ -93,7 +94,7 @@ body{
 }
 
 .jmi-logo{
-    background-image: url("../../../assets/jmi-logo.png");
+
     border-radius: 50%;
     width: 150px;
     height: 150px;
@@ -141,7 +142,7 @@ body{
 }
 
 .card-content{
-   margin-top: 40px;
+    margin-top: 20px !important;
     margin-bottom: 100px;
 }
 
