--- a/client/src/components/Style/Login.css
+++ b/client/src/components/Style/Login.css
@@ -39,6 +39,50 @@ body{
 }
 
 .card-content002{
+	margin-top: 13px !important;
+}
+
+.section-label{
+	width: 200px;
+	font-size: 20px;
+	color: #fff;
+	padding-right: 10px;
+	margin-top: 10px;
+}
+
+.section-label2{
+	width: 200px;
+	font-size: 20px;
+	color: #fff;
+	margin-left: 10px;
+	padding-right: 10px;
+	margin-top: 10px;
+}
+.sec{
+	margin-left: 10px;
+}
+
+.register-content{
+	padding-bottom: 40px;
+
+	margin-bottom: 30px !important;
 	
-	margin-top: 33px;
+}
+
+.form-control{
+	padding: 24px !important;
+
+}
+
+#inputTag{
+	display: none;
+}
+.register-file{
+	color: #000;
+	padding: 10px;
+	padding-left: 20px;
+	padding-right: 20px;
+	border-radius: 5px;
+	margin: 5px;
+	background-color: #fff ;
 }
