--- a/client/src/components/Waiting/Waiting.css
+++ b/client/src/components/Waiting/Waiting.css
@@ -80,3 +80,19 @@ body{
 .waiting .waiting-content{
     padding: 10px;
 }
+
+@media  screen and (max-width:769px) {
+    .home-main-content{
+        background-color: transparent;
+    }
+    .waiting{
+        margin-top: 200px;
+        margin-left: 30px;
+        width: 350px;
+    }
+  
+    .waiting h1{
+        padding-top: 50px !important;
+    }
+  
+}
