--- a/client/src/components/LandingPage/About/About.css
+++ b/client/src/components/LandingPage/About/About.css
@@ -4,56 +4,13 @@
 	box-sizing: border-box;
 	
 }
-body{
-	width: 100%;
-	height: 100vh ;
-    background-color: #fff;
-}
 
-.home-container2 {
+.home-container3 {
     width: 100%;
    height: 100vh;
   
 }
 
-.home-navbar2 {
-	display: flex;
-	justify-content: space-between;
-    position: fixed;
-    right: 50px;
-    top: 20px;
-}
-
-
-.home-nav_items2 ul {
-
-	display: flex;
-}
-
-.home-nav_items2 ul li {
-	padding-right: 70px;
-	padding-top: 30px;
-	font-size: 18px;
-	font-family: sans-serif;
-	font-weight: 500;
-    
-}
-
-.home-nav_items2 a {
-	color: #354E99;
-    font-weight: 700;
-	text-decoration: none;
-}
-
-.home-nav_items2 a:hover {
-	color: rgb(181, 181, 181);
-}
-
-
-
-.card-content2:hover{
-    transform: translateY(-10px);
-}
 
 .about-body-content{
     margin: 100px;
@@ -77,5 +34,13 @@ body{
     width: 100%;
     color: #414040;
     
+}
+
+@media  screen and (max-width:769px) {
+    .about-body-content{
+        margin: 30px;
+        padding-bottom: 20px;
+        padding-top: 100px;
+    }
 }
 
