--- a/client/src/components/LandingPage/Home/Home.css
+++ b/client/src/components/LandingPage/Home/Home.css
@@ -4,9 +4,10 @@
 	box-sizing: border-box;
 	
 }
-body{
+
+.home50{
 	width: 100%;
-	height: 100vh ;
+	height: 100vh !important ;
 }
 
 .home-container img{
@@ -21,91 +22,59 @@ body{
 	
 }
 
-.home-navbar {
-	display: flex;
-	justify-content: space-between;
-}
 
 .home-main-content{
+
+    margin-top: 40px;
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0, 0.3); /* Black w/opacity/see-through */
-    position: absolute;
+    
+
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 1; 
-    width: 95%;
-}
-
-.home-logo img{
-	width: 250px;
-    margin-left: 30px;
-    margin-top: -10px;
-}
-
-.home-nav_items ul {
-
-	display: flex;
-}
-
-.home-nav_items>ul>li {
-	padding-right: 70px;
-	padding-top: 40px;
-	font-size: 15px;
-    font-family: sans-serif;
-	font-weight: 500;
     
+    width: 95%;
+    height: 80vh;
+ 
+ 
 }
 
-.home-nav_items a {
-	color: #fff;
-	text-decoration: none;
+
+.main-content img{
+	width: 150px;
+    height: 150px;
+    margin-left: 180px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+ 
 }
 
-.home-nav_items a:hover {
-	color: rgb(181, 181, 181);
-}
 
-.row{
-    display: flex;
-    height: 88%;
-    align-items: center;
-}
-
-.col{
-    flex-basis: 50%;
-  
-}
 .main-content{
-    margin-top: -100px !important;
-    margin-left: 90px;
+    margin-top: 110px;
+    margin-left: 100px;
     width: 500px;
-    justify-content: center;
-    align-items: center;
+  
 }
 
 .main-content p{
-    color: rgb(190, 190, 190);
+    color: #fff;
     text-align: center;
     margin-top: -10px !important ;
     font-size: 16px !important;
     font-weight: 500 !important;
     letter-spacing: 1px;
+    display: flex;
+        justify-content: center;
+        align-items: center;
 }
 
-.jmi-logo{
-
-    border-radius: 50%;
-    width: 150px;
-    height: 150px;
-    margin-left: 260px;
-    margin-top: 110px;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-.col h1{
+.main-content h1{
+    display: flex;
+        justify-content: center;
+        align-items: center;
     padding-top: 0;
     color: #fff;
     font-size: 45px;
@@ -113,7 +82,6 @@ body{
 
 .card{
     display: inline-block;
-   
     cursor: pointer;
     margin: 50px 10px;
     transition: .3s;
@@ -124,27 +92,15 @@ body{
     width: 270px;
     height: 200px !important;
     border: 1px solid #fff;
-	margin-bottom: 40px !important;
     border-radius: 5px;
-   
-   
 }
 
-
-.card h5{
-    margin: 50px;
-    text-align: center;
-    text-shadow: 0 2px 6px rgba(0,0,0, 0.4);
-    background-color: rgba(0,0,0, 0.5);
-    padding: 5px;
-    border-radius: 5px;
-    color: #fff;
-}
 
 .card-content{
-    margin-top: 20px !important;
-    margin-bottom: 100px;
+ 
+    margin-top: 30px;
 }
+
 
 .card:hover{
     transform: translateY(-10px);
@@ -154,4 +110,87 @@ body{
     padding-bottom: 100px;
     margin-top: 65px;
     margin-bottom: 60px;
+}
+
+
+
+
+/*  */
+
+@media  screen and (max-width:769px) {
+    /* .home-container{
+        z-index: -1 !important;
+    } */
+    .home-main-content{
+        /* z-index: 1 !important; */
+        margin-top: 60px;
+        background-color: rgba(0,0,0, 0.3);    
+           height: 88vh;
+    }
+
+    .main-content{ 
+       margin-top: 10px;
+        width: auto !important;
+        margin-left: 0 !important;
+    }
+
+    .main-content h1{
+        
+        display: flex;
+        justify-content: center;
+        align-items: center;
+       font-size: 30px;
+    }
+
+    .card{ 
+       
+        margin-bottom: -30px !important;
+    }
+
+    .main-content p{
+        
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: #c8c5c5;
+        font-size: 10px;
+     }
+
+    
+    .main-content img {
+  
+         margin: auto;
+        width: 130px !important;
+        height: 130px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      
+    }
+
+    .card-content{
+        
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 0px;
+        margin-bottom: 0px;
+       
+    }
+
+    .card{
+        display: inline-block;
+        cursor: pointer;
+        transition: .3s;
+        padding: 0;
+        background: none !important;
+    }
+
+    .card img{
+        width: 180px;
+        height: 120px !important;
+        border: 1px solid #fff;
+        border-radius: 5px;
+          
+    }
 }
