--- a/client/src/components/Style/Login.css
+++ b/client/src/components/Style/Login.css
@@ -4,9 +4,9 @@
 	box-sizing: border-box;
 	
 }
-body{
+.home50{
 	width: 100%;
-	height: 100vh ;
+	height: 100vh !important ;
 }
 
 .login_body {
@@ -18,28 +18,107 @@ body{
 	font-family: Arial, Helvetica, sans-serif;
 }
 
-.login01 {
-	margin-top: 30px;
+.login01{
+	margin-top: 10px !important;
 	background-color: #24bc1c;
 	color: #ffffff ;
+	margin-bottom: -5px;
 	text-shadow: 0 1px 3px rgba(0,0,0,.3);
 	cursor: pointer;
 }
+.home-container2 img{
 
+	filter: blur(8px);
+  -webkit-filter: blur(8px);
+   width: 100%;
+   height: 100vh;
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: cover;
+   
+}
 .home-main-content2{
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0, 0.3); /* Black w/opacity/see-through */
+	margin-top: 40px;
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0, 0.3);
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 1; 
+    /* z-index: 1;  */
     width: 95%;
 
 }
+.main-content2{ 
+	margin-top: 110px;
+    margin-left: 100px;
+    width: 500px;
+	 
+ }
+
+ .main-content2 h1{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+padding-top: 0;
+color: #fff;
+font-size: 45px;
+}
+
+.main-content2 p{
+	color: #fff;
+    text-align: center;
+    margin-top: -10px !important ;
+    font-size: 16px !important;
+    font-weight: 500 !important;
+    letter-spacing: 1px;
+    display: flex;
+        justify-content: center;
+        align-items: center;
+ }
+
+
+.main-content2 img {
+
+	width: 150px;
+    height: 150px;
+    margin-left: 180px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+  
+}
+
+
+.login_form{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.form-login{
+	padding-left: 20px;
+	width: 320px;
+}
+
+.form_bottom_links{
+
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.create_account {
+
+	margin-left: -140px;
+}
 
 .card-content002{
-	margin-top: 13px !important;
+	margin-right: 150px !important;
+	margin-top: 100px !important;
+	margin-bottom: 50px !important;
 }
 
 .section-label{
@@ -58,14 +137,15 @@ body{
 	padding-right: 10px;
 	margin-top: 10px;
 }
+
 .sec{
 	margin-left: 10px;
 }
 
 .register-content{
-	padding-bottom: 40px;
-
-	margin-bottom: 30px !important;
+	margin-top: 80px !important;
+	padding-bottom: 22px;
+	margin-bottom: 20px !important;
 	
 }
 
@@ -85,4 +165,121 @@ body{
 	border-radius: 5px;
 	margin: 5px;
 	background-color: #fff ;
+}
+
+.profile-button{
+	width: 70rem;
+}
+
+
+@media  screen and (max-width:769px) {
+	.home-main-content2{ 
+		margin-top: 60px;
+        background-color: transparent;    
+           height: 88vh;
+		   
+    }
+
+	.main-content2{ 
+		margin-top: 50px;
+		 width: auto !important;
+		 margin-left: 0 !important;
+		 
+	 }
+
+	 .main-content2 h1{
+		
+        color: #fff;
+		text-shadow: 0 4px 8px rgba(0,0,0, 0.3);
+		font-weight: 700;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+       font-size: 30px;
+    }
+
+	.main-content2 p{
+		width: 330px;
+        color: #ccc9c9;
+		text-shadow: 0 4px 8px rgba(0,0,0, 0.3);
+		font-weight: 500;
+		text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 15px;
+     }
+
+    
+    .main-content2 img {
+  
+       margin: auto;
+        width: 130px !important;
+        height: 130px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      
+    }
+
+	 .card-content002{
+		margin-top: 0px !important;
+		margin-bottom: -50px !important;
+	}
+
+	.login_form{
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.form-login{
+		padding-left: 20px;
+		width: 320px;
+	}
+
+	.form_bottom_links{
+	
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
+	}
+
+	.create_account {
+	
+		margin-left: -140px;
+	}
+}
+
+@media  screen and (max-width:769px) {
+	.home-main-content2{ 
+		
+		margin-top: 60px;
+        background-color: transparent;    
+           height: auto;
+		   
+    }
+
+	.register-content{
+		margin-top: -5px !important;
+	}
+
+	.r-form{
+		
+		padding: 5px !important;
+	}
+
+	.sec{
+		
+		color: #fff;
+		background-color: #24bc1c;
+	}
+
+	.profile-button{
+		width: 300px;
+		padding: 8px;
+		border-radius: 5px;
+	}
 }
