--- a/client/src/components/Style/StudentCss/StudentTaskView.css
+++ b/client/src/components/Style/StudentCss/StudentTaskView.css
@@ -3,6 +3,10 @@
   
     background-color: #eee;
   }
+
+  .form-task{
+    border-radius: 5px !important;
+  }
  
   .head-title li a{
     color: #444242;
@@ -32,6 +36,14 @@
   width: 150px !important;
   margin: 0;
 
+  }
+
+  .about-text2{
+    margin-top: 20px !important;
+  }
+
+  .discription{
+    margin-left: -40px !important;
   }
 
   
@@ -64,6 +76,12 @@
     width: 200px;
   }
 
+  .about-list h3{
+    margin-left: 30px !important;
+   font-size: 18px;
+   font-weight: 700;
+  }
+
   .form_file{
     width: auto;
     display: flex;
@@ -73,4 +91,41 @@
   .form-group3{
     width: 400px;
     color: #000;
+  }
+
+  @media screen and (max-width:769px) {
+    .dark-color{
+      font-size: 25px;
+      font-weight: 700;
+    }
+    .row-main2{
+      margin-left: -40px !important;
+      
+    }
+
+    .about-list{
+      width: 100%;
+    }
+
+    .media2{
+      display: flex;
+      flex-direction: column;
+    }
+
+    .about-list p{
+      width: 300px !important;
+      margin-left: -25px !important;
+    }
+
+    .about-list h3{
+      font-size: 15px;
+      margin-left: 20px;
+    }
+
+    .form-main{
+      margin-left: -50px;
+    }
+    .form-task{
+        width: 300px !important;
+    }
   }
