--- a/client/src/components/Style/StudentCss/StudentTeacher.css
+++ b/client/src/components/Style/StudentCss/StudentTeacher.css
@@ -31,7 +31,7 @@ body {
 /* card */
 
 
-.column{
+.col{
   float: left;
   width: 20%;
   padding: 0 20px;
@@ -129,14 +129,17 @@ body {
 }
 
 .details h4{
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  text-align: center;
     font-size: 10px;
     font-weight:500;
     width: 70px;
     border-radius: 80px;
-    margin-left: 50px;
+    margin-left: 48px;
     background-color:#0072ff;
     color: white;
-    margin-top: -10px;
     padding:4px;
     font-weight: 300;
 }
@@ -144,6 +147,50 @@ body {
  .details h4:hover{
     background-color: rgba(0, 0, 0, 0.3);
     color: white;
+}
+
+
+@media screen and (max-width:769px) {
+  .searchbar{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .searchbar .searchterm{
+    width: auto;
+  }
+
+  .searchbar i{
+    padding-right: 20px;
+  }
+
+  .container{
+    margin-top: 10px !important;
+    margin-bottom: 30px !important;
+  }
+  .container .card001 {
+    width: 150px;
+    height: 230px;
+  
+  }
+
+  .col{
+    float: left;
+    width: 40%;
+    padding: 0 5px;
+  }
+
+  .column{
+    float: left;
+    width: 20%;
+    padding: 0 20px;
+  }
+  
+  .details h4{
+    margin-left: 40px;
+  }
+ 
+
 }
 
 
