--- a/client/src/components/Style/StudentCss/StudentTeacherKnowmore.css
+++ b/client/src/components/Style/StudentCss/StudentTeacherKnowmore.css
@@ -22,7 +22,7 @@
   color: rgb(37, 37, 37);
 }
 .about-avatar{
-  margin-top: 100px;
+  margin-top: 60px;
   margin-left: 30px;
 }
 .about-avatar img{
@@ -35,9 +35,107 @@
 
 .counter{
   background-color: #fff;
+  padding-left: 20px !important;
   padding: 10px;
   padding-top: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgb(0,0,0,0.3);
 }
+.counter h6{
+  width: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 25px;
+  font-weight: 700;
+}
 
+.counter p{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 150px;
+  text-align: center;
+  font-size: 17px;
+}
+.counter-inside{
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+}
+.rank{
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+
+
+@media screen and (max-width:769px) {
+
+  .row-main{
+    margin-top: -130px;
+    width: auto;
+  }
+
+  .row-main .about-avatar img{
+    width: 120px;
+    margin-left: -130px;
+    height: 120px !important;
+
+  }
+ 
+
+  .about-text{
+ 
+    margin-top: 10px !important;
+    margin-left: -100px !important;
+  }
+
+  .about h3{
+    font-size: 25px;
+  }
+
+  .about p{
+    width: 320px !important;
+  }
+
+  .counter{
+    padding-left: 0px !important;
+    margin-left: -100px !important;
+    width: 330px;
+  }
+  .about{
+    margin-left: 5px !important;
+  }
+
+  .counter h6{
+    font-size: 18px;
+    font-weight: 700;
+  }
+  
+  .counter p{
+    font-size: 13px;
+  }
+
+  .counter-inside{
+    display: flex;
+    flex-direction: column !important;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .rank{
+    width: 100%;
+    display: flex;
+    flex-direction: row !important;
+    justify-content: space-between !important;
+    align-items: center;
+  }
+  .about-list p{
+    width: 150px !important;
+    font-size: 12px !important;
+  }
+
+}
