--- a/client/src/components/Style/TeacherCss/TeacherTask.css
+++ b/client/src/components/Style/TeacherCss/TeacherTask.css
@@ -49,6 +49,33 @@
     cursor: pointer;
 }
 
+.assign-task-std{
+    width: 100% !important;
+    height: 100px !important;
+    border: 1px solid rgb(208, 206, 206);
+    background-color: rgb(248,248,248);
+    padding: 5px !important;
+}
+
 textarea{
     margin-left: 15px;
+}
+
+@media screen and ( max-width: 769px ) {
+    .assign-task-css{
+        margin-left: -15px !important;
+    }
+    .task-dis{
+        width: 300px;
+    }
+
+    .but-task{
+        width: 300px !important;
+        margin-left: 10px;
+        border-radius: 3px !important;
+    }
+
+    .assign-task-std{
+        width: 300px !important;
+    }
 }
