updated somthing new

--- a/client/src/components/LandingPage/Home/Home.css
+++ b/client/src/components/LandingPage/Home/Home.css
@@ -97,7 +97,6 @@
 
 
 .card-content{
- 
     margin-top: 30px;
 }
 
@@ -112,15 +111,18 @@
     margin-bottom: 60px;
 }
 
+.landing-page-content{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
 
 
 /*  */
 
 @media  screen and (max-width:769px) {
-    /* .home-container{
-        z-index: -1 !important;
-    } */
+  
     .home-main-content{
         /* z-index: 1 !important; */
         margin-top: 60px;
@@ -129,14 +131,17 @@
     }
 
     .main-content{ 
+       
        margin-top: 10px;
         width: auto !important;
         margin-left: 0 !important;
     }
 
     .main-content h1{
-        
+      
+        text-shadow: 0 4px 8px rgba(0,0,0, 0.3);
         display: flex;
+        width: 350px;
         justify-content: center;
         align-items: center;
        font-size: 30px;
@@ -148,11 +153,12 @@
     }
 
     .main-content p{
-        
+        width: 350px;
         display: flex;
         justify-content: center;
         align-items: center;
-        color: #c8c5c5;
+        text-shadow: 0 4px 8px rgba(0,0,0, 0.3);
+        color: #e6e4e4;
         font-size: 10px;
      }
 
@@ -169,10 +175,10 @@
     }
 
     .card-content{
-        
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-left: 0px;
         margin-top: 0px;
         margin-bottom: 0px;
        
