--- a/client/src/components/LandingPage/Home/Home.css
+++ b/client/src/components/LandingPage/Home/Home.css
@@ -1,202 +1,173 @@
-*{
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.home50{
-	width: 100%;
-	height: 100vh !important ;
+.home50 {
+  width: 100%;
+  height: 100vh !important ;
 }
 
-.home-container img{
-
-     filter: blur(8px);
-   -webkit-filter: blur(8px);
-	width: 100%;
-	height: 100vh;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	
+.home-container img {
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
+  width: 100%;
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
+.home-main-content {
+  margin-top: 40px;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.3);
 
-.home-main-content{
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 
-    margin-top: 40px;
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0, 0.3); /* Black w/opacity/see-through */
-    
-
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    
-    width: 95%;
-    height: 80vh;
- 
- 
+  width: 95%;
+  height: 80vh;
 }
 
-
-.main-content img{
-	width: 150px;
-    height: 150px;
-    margin-left: 180px;
-   display: flex;
-   align-items: center;
-   justify-content: center;
- 
+.main-content img {
+  width: 150px;
+  height: 150px;
+  margin-left: 180px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-
-.main-content{
-    margin-top: 110px;
-    margin-left: 100px;
-    width: 500px;
-  
+.main-content {
+  margin-top: 110px;
+  margin-left: 100px;
+  width: 500px;
 }
 
-.main-content p{
-    color: #fff;
-    text-align: center;
-    margin-top: -10px !important ;
-    font-size: 16px !important;
-    font-weight: 500 !important;
-    letter-spacing: 1px;
+.main-content p {
+  color: #fff;
+  text-align: center;
+  margin-top: -10px !important ;
+  font-size: 16px !important;
+  font-weight: 500 !important;
+  letter-spacing: 1px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.main-content h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 0;
+  color: #fff;
+  font-size: 45px;
+}
+
+.card {
+  display: inline-block;
+  cursor: pointer;
+  margin: 50px 10px;
+  transition: 0.3s;
+}
+
+.card img {
+  width: 270px;
+  height: 200px !important;
+  border: 1px solid #fff;
+  border-radius: 5px;
+}
+
+.card-content {
+  margin-top: 30px;
+}
+
+.card:hover {
+  transform: translateY(-10px);
+}
+
+.login {
+  padding-bottom: 100px;
+  margin-top: 65px;
+  margin-bottom: 60px;
+}
+
+.landing-page-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+@media screen and (max-width: 769px) {
+  .home-main-content {
+    margin-top: 60px;
+    background-color: rgba(0, 0, 0, 0.3);
+    height: 88vh;
+  }
+
+  .main-content {
+    margin-top: 10px;
+    width: auto !important;
+    margin-left: 0 !important;
+  }
+
+  .main-content h1 {
+    text-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     display: flex;
-        justify-content: center;
-        align-items: center;
-}
+    width: 350px;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+  }
 
-.main-content h1{
+  .card {
+    margin-bottom: -30px !important;
+  }
+
+  .main-content p {
+    width: 350px;
     display: flex;
-        justify-content: center;
-        align-items: center;
-    padding-top: 0;
-    color: #fff;
-    font-size: 45px;
-}
+    justify-content: center;
+    align-items: center;
+    text-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    color: #e6e4e4;
+    font-size: 10px;
+  }
 
-.card{
+  .main-content img {
+    margin: auto;
+    width: 130px !important;
+    height: 130px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .card-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 0px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
+  .card {
     display: inline-block;
     cursor: pointer;
-    margin: 50px 10px;
-    transition: .3s;
-    
-}
+    transition: 0.3s;
+    padding: 0;
+    background: none !important;
+  }
 
-.card img{
-    width: 270px;
-    height: 200px !important;
+  .card img {
+    width: 180px;
+    height: 120px !important;
     border: 1px solid #fff;
     border-radius: 5px;
-}
-
-
-.card-content{
-    margin-top: 30px;  
-}
-
-
-.card:hover{
-    transform: translateY(-10px);
-}
-
-.login{
-    padding-bottom: 100px;
-    margin-top: 65px;
-    margin-bottom: 60px;
-}
-
-.landing-page-content{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-
-
-/*  */
-
-@media  screen and (max-width:769px) {
-  
-    .home-main-content{
-        /* z-index: 1 !important; */
-        margin-top: 60px;
-        background-color: rgba(0,0,0, 0.3);    
-           height: 88vh;
-    }
-
-    .main-content{ 
-       
-       margin-top: 10px;
-        width: auto !important;
-        margin-left: 0 !important;
-    }
-
-    .main-content h1{
-      
-        text-shadow: 0 4px 8px rgba(0,0,0, 0.3);
-        display: flex;
-        width: 350px;
-        justify-content: center;
-        align-items: center;
-       font-size: 30px;
-    }
-
-    .card{ 
-       
-        margin-bottom: -30px !important;
-    }
-
-    .main-content p{
-        width: 350px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-shadow: 0 4px 8px rgba(0,0,0, 0.3);
-        color: #e6e4e4;
-        font-size: 10px;
-     }
-
-    
-    .main-content img {
-  
-         margin: auto;
-        width: 130px !important;
-        height: 130px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      
-    }
-
-    .card-content{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-left: 0px;
-        margin-top: 0px;
-        margin-bottom: 0px;
-       
-    }
-
-    .card{
-        display: inline-block;
-        cursor: pointer;
-        transition: .3s;
-        padding: 0;
-        background: none !important;
-    }
-
-    .card img{
-        width: 180px;
-        height: 120px !important;
-        border: 1px solid #fff;
-        border-radius: 5px;
-          
-    }
+  }
 }
