--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,44 +1,46 @@
 .dropbtn2 {
-    color: white;
-    padding: 15px;
-    font-size: 16px;
-    border: none;
+  color: white;
+  padding: 15px;
+  font-size: 16px;
+  border: none;
+}
+.dropdown2 {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content2 {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 110px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content2 a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content2 a:hover {
+  background-color: #ddd;
+}
+
+.dropdown2:hover .dropdown-content2 {
+  display: block;
+}
+
+@media screen and (max-width: 769px) {
+  nav {
+    width: 100%;
+  }
+  .left-nav {
+    margin-left: -40px !important;
   }
   .dropdown2 {
-    position: relative;
-    display: inline-block;
+    margin-right: -30px !important;
   }
-  
-  .dropdown-content2 {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 110px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  .dropdown-content2 a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  .dropdown-content2 a:hover {background-color: #ddd;}
-  
-  .dropdown2:hover .dropdown-content2 {display: block;}
-  
-  @media screen and (max-width:769px) {
-    nav{
-
-      width: 100%;
-    }
-    .left-nav{
-     
-      margin-left: -40px !important;
-    }
-    .dropdown2 {
-      margin-right: -30px !important;
-    }
-  }
+}
