--- a/client/src/components/Style/StudentCss/StudentGroup.css
+++ b/client/src/components/Style/StudentCss/StudentGroup.css
@@ -1,122 +1,112 @@
-
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
-.content{
-    padding: 20px;
+.content {
+  padding: 20px;
 }
 .search {
+  width: 100%;
+  position: relative;
+  display: flex;
+}
+.searchterm {
+  width: 100%;
+  outline: none;
+  margin-left: 20px;
+  border-radius: 30px 0 0 30px;
+  transition: 0.3s;
+}
+
+.search label {
+  padding-top: 15px;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  font-size: 20px;
+  padding-left: 10px;
+  background-color: white;
+  border: none;
+
+  border-radius: 0 30px 30px 0;
+  margin: 5px 0;
+  opacity: 0.6;
+  font-size: 15px;
+  text-decoration: nonn;
+}
+
+.search label:hover {
+  background-color: white;
+  opacity: 1;
+}
+.search label:active {
+  background-color: white;
+  opacity: 1;
+  font-size: 14px;
+}
+.wrap {
+  width: 40%;
+  margin-bottom: 20px;
+}
+
+.column {
+  float: left;
+  width: 20%;
+  padding: 0 10px;
+}
+
+.row {
+  margin: 0 -5px;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+@media screen and (max-width: 600px) {
+  .column {
     width: 100%;
-    position: relative;
-    display: flex;
-}
-.searchterm
-    {
-        width: 100%;  
-        outline: none;
-        margin-left: 20px;
-        border-radius: 30px 0 0 30px;
-        transition: .3s;
-      }
-
-.search label{
-        padding-top: 15px;
-        width: 50px;
-        height: 50px;
-        cursor: pointer;
-        font-size: 20px;
-        padding-left: 10px;
-        background-color: white;
-        border: none;
-       
-        border-radius: 0 30px 30px 0;
-        margin: 5px 0;
-        opacity: 0.6;
-        font-size: 15px;
-        text-decoration: nonn;
-        
-}
-
-.search label:hover{
-    background-color: white;
-    opacity: 1;
-}
-.search label:active{
-    background-color: white;
-    opacity: 1;
-    font-size: 14px;
-}
-.wrap{
-    width: 40%;
+    display: block;
     margin-bottom: 20px;
   }
-
-
-  /* Float four columns side by side */
-.column {
-    float: left;
-    width: 20%;
-    padding: 0 10px;
-  }
-  
-  /* Remove extra left and right margins, due to padding */
-  .row {
-    margin: 0 -5px;
 }
-  
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  
-  /* Responsive columns */
-  @media screen and (max-width: 600px) {
-    .column {
-      width: 100%;
-      display: block;
-      margin-bottom: 20px;
-    }
-  }
-  
-  /* Style the counter cards */
-  .card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    height: 130px ;
-    margin-bottom: 40px;
-    text-align: center;
-    background-color: #fff;
-  }
 
-  .card h3{
-    padding-top: 50px;
-    font-size: 25px;
-    font-weight: 500;
-    color: #000;
-    padding-bottom: 10px;
-  }
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  height: 130px;
+  margin-bottom: 40px;
+  text-align: center;
+  background-color: #fff;
+}
 
-  .card p{
-    margin-bottom: 0;
-    width: 100%;
-    height: 30px;
-    background-color: #0072ff;
-    color: white;
-    padding-top: 4px;
-    font-size: 15px;
-    transition: .2s;
-    cursor: pointer;
- 
-  }
+.card h3 {
+  padding-top: 50px;
+  font-size: 25px;
+  font-weight: 500;
+  color: #000;
+  padding-bottom: 10px;
+}
 
-  .card p:hover{
-    background-color: #0072ff;
-    color: white;
-    border-radius: 3px;
-  }
+.card p {
+  margin-bottom: 0;
+  width: 100%;
+  height: 30px;
+  background-color: #0072ff;
+  color: white;
+  padding-top: 4px;
+  font-size: 15px;
+  transition: 0.2s;
+  cursor: pointer;
+}
 
-  .card p:active{
-    font-size: 13px;
-  }
+.card p:hover {
+  background-color: #0072ff;
+  color: white;
+  border-radius: 3px;
+}
+
+.card p:active {
+  font-size: 13px;
+}
