--- a/client/src/components/Style/StudentCss/StudentTeacher.css
+++ b/client/src/components/Style/StudentCss/StudentTeacher.css
@@ -1,55 +1,42 @@
-
 body {
   font-family: sans-serif;
-  background: #eee ;
+  background: #eee;
 }
 
-.searchbar{
+.searchbar {
   display: flex;
   justify-content: space-between;
-
-  .wrap{
-    margin-top: 20px;
-    margin-right: 50px;
-  }
 }
 
-.head-title{
+.head-title {
   margin-top: 20px;
   margin-left: 20px;
   width: 300px;
-  
 }
-.head-title li a{
+.head-title li a {
   color: #444242;
 }
-.head-title li a:hover{
+.head-title li a:hover {
   color: blue;
 }
 
-
-/* card */
-
-
-.col{
+.col {
   float: left;
   width: 20%;
   padding: 0 20px;
 }
 
-/* Remove extra left and right margins, due to padding */
 .row {
   margin: 0 -5px;
 }
 
-/* Clear floats after the columns */
 .row:after {
   content: "";
   display: table;
   clear: both;
 }
 
-.container{
+.container {
   margin-top: 10px !important;
   margin-bottom: 30px !important;
 }
@@ -63,49 +50,33 @@ body {
   cursor: pointer;
   transition: 0.3s;
   margin: 10px;
-  
-  .card-image{
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    background-color: #000;
-    transition: .3s;
-  }
+}
 
-  .card-image img{
-    width: 100%;
-    height: 100%;
-    background-position: center;
-	  background-repeat: no-repeat;
-	  background-size: cover;
-  }
-  .details{
-    visibility:hidden;
-    transition: .3s;
-  }
-  &:hover img {
-    opacity: 0.5;
-    transition: .3s;
-  }
-
+.card-image img {
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.details {
+  visibility: hidden;
+  transition: 0.3s;
 }
 
 .card001:hover .card-image {
- 
   transform: translateY(-100px);
-  transition: all .9s;
-  
+  transition: all 0.9s;
 }
 
 .card001:hover .details {
   overflow: hidden;
- /* transform: translateY(0px); */
- visibility: visible;
- transition: all .9s;
+  visibility: visible;
+  transition: all 0.9s;
 }
 
 .details {
-  transition: .3s;
+  transition: 0.3s;
   position: absolute;
   bottom: 0;
   background: #fff;
@@ -116,81 +87,75 @@ body {
 }
 
 .details h2 {
-    font-size: 20px;
-    font-weight:700;
-    color: crimson;
+  font-size: 20px;
+  font-weight: 700;
+  color: crimson;
 }
- .details .job-title {
-   padding-top: 0;
-    font-size: 13px;
-    font-weight:700;
-    color: #000;
-    font-weight: 300;
+.details .job-title {
+  padding-top: 0;
+  font-size: 13px;
+  font-weight: 700;
+  color: #000;
+  font-weight: 300;
 }
 
-.details h4{
+.details h4 {
   align-items: center;
   display: flex;
   justify-content: center;
   text-align: center;
-    font-size: 10px;
-    font-weight:500;
-    width: 70px;
-    border-radius: 80px;
-    margin-left: 48px;
-    background-color:#0072ff;
-    color: white;
-    padding:4px;
-    font-weight: 300;
+  font-size: 10px;
+  font-weight: 500;
+  width: 70px;
+  border-radius: 80px;
+  margin-left: 48px;
+  background-color: #0072ff;
+  color: white;
+  padding: 4px;
+  font-weight: 300;
 }
 
- .details h4:hover{
-    background-color: rgba(0, 0, 0, 0.3);
-    color: white;
+.details h4:hover {
+  background-color: rgba(0, 0, 0, 0.3);
+  color: white;
 }
 
-
-@media screen and (max-width:769px) {
-  .searchbar{
+@media screen and (max-width: 769px) {
+  .searchbar {
     display: flex;
     flex-direction: column;
   }
 
-  .searchbar .searchterm{
+  .searchbar .searchterm {
     width: auto;
   }
 
-  .searchbar i{
+  .searchbar i {
     padding-right: 20px;
   }
 
-  .container{
+  .container {
     margin-top: 10px !important;
     margin-bottom: 30px !important;
   }
   .container .card001 {
     width: 150px;
     height: 230px;
-  
   }
 
-  .col{
+  .col {
     float: left;
     width: 40%;
     padding: 0 5px;
   }
 
-  .column{
+  .column {
     float: left;
     width: 20%;
     padding: 0 20px;
   }
-  
-  .details h4{
+
+  .details h4 {
     margin-left: 40px;
   }
- 
-
 }
-
-
