--- a/client/src/components/Style/TeacherCss/TeacherStudentKnowmore.css
+++ b/client/src/components/Style/TeacherCss/TeacherStudentKnowmore.css
@@ -1,48 +1,48 @@
-.section{
+.section {
   width: auto;
 }
 
-.row-main{
+.row-main {
   display: flex !important;
   margin-left: 50px;
 }
-.about-text{
+.about-text {
   margin-top: 50px;
   width: 700px;
 }
-.about{
+.about {
   margin-left: 20px !important;
 }
-.about1{
+.about1 {
   font-size: 40px;
   color: #0072ff !important;
-  font-weight: 700 ;
+  font-weight: 700;
 }
-.about2{
+.about2 {
   color: rgb(37, 37, 37);
 }
-.about-avatar{
+.about-avatar {
   margin-top: 60px;
   margin-left: 30px;
 }
-.about-avatar img{
+.about-avatar img {
   width: 220px;
   height: 30vh !important;
 }
-.counter{
+.counter {
   margin-top: 20px !important;
-} 
+}
 
-.counter{
+.counter {
   background-color: #fff;
   padding-left: 20px !important;
   padding: 10px;
   padding-top: 20px;
   border-radius: 10px;
-  box-shadow: 0 4px 8px rgb(0,0,0,0.3);
+  box-shadow: 0 4px 8px rgb(0, 0, 0, 0.3);
 }
 
-.counter h6{
+.counter h6 {
   width: 150px;
   display: flex;
   justify-content: center;
@@ -52,7 +52,7 @@
   font-weight: 700;
 }
 
-.counter p{
+.counter p {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -60,12 +60,12 @@
   text-align: center;
   font-size: 17px;
 }
-.counter-inside{
+.counter-inside {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
 }
-.rank{
+.rank {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
