--- a/client/src/components/Style/TeacherCss/TeacherTask.css
+++ b/client/src/components/Style/TeacherCss/TeacherTask.css
@@ -1,81 +1,80 @@
-.contact-form{
-    background: #fff;
-    margin-top: 10%;
-    margin-bottom: 5%;
-    width: 70%;
+.contact-form {
+  background: #fff;
+  margin-top: 10%;
+  margin-bottom: 5%;
+  width: 70%;
 }
-.contact-form .form-control{
-    border-radius:1rem;
+.contact-form .form-control {
+  border-radius: 1rem;
 }
-.contact-image{
-    text-align: center;
+.contact-image {
+  text-align: center;
 }
-.contact-image img{
-    border-radius: 6rem;
-    width: 11%;
-    margin-top: -3%;
-    transform: rotate(29deg);
+.contact-image img {
+  border-radius: 6rem;
+  width: 11%;
+  margin-top: -3%;
+  transform: rotate(29deg);
 }
-.contact-form form{
-    padding: 14%;
+.contact-form form {
+  padding: 14%;
 }
-.contact-form form .row{
-    margin-bottom: -7%;
+.contact-form form .row {
+  margin-bottom: -7%;
 }
-.contact-form h3{
-    margin-bottom: 8%;
-    margin-top: -10%;
-    text-align: center;
-    color: #0062cc;
+.contact-form h3 {
+  margin-bottom: 8%;
+  margin-top: -10%;
+  text-align: center;
+  color: #0062cc;
 }
 .contact-form .btnContact {
-    width: 50%;
-    border: none;
-    border-radius: 1rem;
-    padding: 1.5%;
-    background: #dc3545;
-    font-weight: 600;
-    color: #fff;
-    cursor: pointer;
+  width: 50%;
+  border: none;
+  border-radius: 1rem;
+  padding: 1.5%;
+  background: #dc3545;
+  font-weight: 600;
+  color: #fff;
+  cursor: pointer;
 }
-.btnContactSubmit
-{
-    width: 50%;
-    border-radius: 1rem;
-    padding: 1.5%;
-    color: #fff;
-    background-color: #0062cc;
-    border: none;
-    cursor: pointer;
-}
-
-.assign-task-std{
-    width: 100% !important;
-    height: 100px !important;
-    border: 1px solid rgb(208, 206, 206);
-    background-color: rgb(248,248,248);
-    padding: 5px !important;
+.btnContactSubmit {
+  width: 50%;
+  border-radius: 1rem;
+  padding: 1.5%;
+  color: #fff;
+  background-color: #0062cc;
+  border: none;
+  cursor: pointer;
 }
 
-textarea{
-    margin-left: 15px;
+.assign-task-std {
+  width: 100% !important;
+  height: 100px !important;
+  border: 1px solid rgb(208, 206, 206);
+  background-color: rgb(248, 248, 248);
+  padding: 5px !important;
 }
 
-@media screen and ( max-width: 769px ) {
-    .assign-task-css{
-        margin-left: -15px !important;
-    }
-    .task-dis{
-        width: 300px;
-    }
+textarea {
+  margin-left: 15px;
+}
 
-    .but-task{
-        width: 300px !important;
-        margin-left: 10px;
-        border-radius: 3px !important;
-    }
+@media screen and (max-width: 769px) {
+  .assign-task-css {
+    margin-left: -15px !important;
+  }
+  .task-dis {
+    width: 300px;
+  }
 
-    .assign-task-std{
-        width: 300px !important;
-    }
+  .but-task {
+    width: 300px !important;
+    margin-left: 10px;
+    border-radius: 3px !important;
+  }
+
+  .assign-task-std {
+    width: 300px !important;
+  }
 }
